css/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-size: 16px;
  font-family: 'Josefin Sans', sans-serif;
  font-weight: 400;
}

.container {
  display: flex;
}

.text-section {
  height: 100vh;
  flex: 1.4;
  background-image: url('../images/bg-pattern-desktop.svg');
  background-size: cover;
}

.img-section {
  height: 100vh;
  flex: 1;
  background-image: url('../images/hero-desktop.jpg');
  background-size: cover;
}

.main {
  margin: 9.5% 20%;
}

.main > p {
  line-height: 27px;
  margin: 40px 0;
  color: #bd9d9c;
}

.push-down {
  margin-top: 80px;
  font-weight: 700;
  font-size: 60px;
  letter-spacing: 10px;
}

.index-text {
  font-family: 'Josefin Sans', sans-serif;
  font-weight: 200;
  font-size: 60px;
  letter-spacing: 10px;
  color: #bd9d9c;
}

input[type='email'] {
  width: 80%;
  padding: 15px;
  border-radius: 30px;
  border: 1px solid #ede2e5;
  color: #bd9d9c;
}

input[type='submit'] {
  width: 95px;
  padding: 15px;
  border-radius: 30px;
  border: 1px solid hsl(0, 80%, 86%);
  margin-left: -60px;
  background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
}

.attribution {
  visibility: hidden;
}
@media (max-width: 500px) {
  .logo {
    width: 120px;
    margin-top: 20px;
  }

  .container {
    display: block;
    position: relative;
  }

  .img-section {
    height: 300px;
    width: 100vw;
    position: absolute;
    top: 14%;
  }

  .push-down {
    margin-top: 400px;
    font-size: 40px;
  }

  .index-text {
    font-size: 40px;
    text-align: center;
  }

  .main {
    margin-top: 4%;
  }
}

